--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<script src="main.js"></script>
+    <div id="topbar">
+        <button id="openFolder">📁 폴더 열기</button>
+        <button id="toggleDark">🌙</button>
+    </div>
+
+    <div id="main">
+        <div id="treeContainer"><div id="tree" class="tree"></div></div>
+        <div id="resizer"></div>
+        <div id="preview"><em>파일을 선택하면 내용이 여기에 표시됩니다.</em></div>
+    </div>
+    
+    <script src="main.js"></script>
 </body>
 </html>
